correctly importing mat-modules, i think

--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/projected-components/feature-flag-root-section-card-list/projected-components/feature-flag-root-table-section-card/projected-components/feature-flag-root-table-section-card-content-container/feature-flag-root-table-section-card-content-container.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/projected-components/feature-flag-root-section-card-list/projected-components/feature-flag-root-table-section-card/projected-components/feature-flag-root-table-section-card-content-container/feature-flag-root-table-section-card-content-container.component.html
@@ -8,7 +8,7 @@
   </ng-template>
 
   <ng-template #table>
-    <mat-table [dataSource]="(flags | async)">
+    <table mat-table [dataSource]="(flags | async)">
 
       <!-- Flag Column -->
       <ng-container matColumnDef="name">
@@ -20,6 +20,6 @@
 
       <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
       <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-    </mat-table>
+    </table>
   </ng-template>
 </div>
