segment context chips in list and view comp feature added

--- a/frontend/projects/upgrade/src/app/features/dashboard/home/pages/view-experiment/view-experiment.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/pages/view-experiment/view-experiment.component.html
@@ -245,7 +245,7 @@
                 }}</span>
               </div>
 
-              <!-- Stratification Factor Assinment Algorithm -->
+              <!-- Stratification Factor Assignment Algorithm -->
               <div class="section-data">
                 <span
                   class="ft-16-600 section-data-title"
