--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/factorial-experiment-design/factorial-experiment-design.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/factorial-experiment-design/factorial-experiment-design.component.html
@@ -116,7 +116,7 @@
                   <button
                     type="button"
                     class="row-action-btn"
-                    [disabled]="(isFormLockedForEdit$ | async) && (decisionPointsTableEditIndex$ | async) !== rowIndex"
+                    [disabled]="((isFormLockedForEdit$ | async) && (decisionPointsTableEditIndex$ | async) !== rowIndex) || !isExperimentEditable"
                     (click)="handleDecisionPointTableEditClick(rowIndex, rowData.getRawValue())"
                   >
                     <!-- Edit Icon -->
@@ -131,7 +131,7 @@
                   <button
                     type="button"
                     class="row-action-btn"
-                    [disabled]="(isFormLockedForEdit$ | async) && (decisionPointsTableEditIndex$ | async) !== rowIndex"
+                    [disabled]="((isFormLockedForEdit$ | async) && (decisionPointsTableEditIndex$ | async) !== rowIndex) || !isExperimentEditable"
                     (click)="handleDecisionPointTableClearOrRemoveRow(rowIndex)"
                   >
                     <!-- Delete Icon -->
@@ -360,7 +360,7 @@
                   <button
                     type="button"
                     class="row-action-btn"
-                    [disabled]="(isFormLockedForEdit$ | async) && (factorsTableEditIndex$ | async) !== rowIndex"
+                    [disabled]="((isFormLockedForEdit$ | async) && (factorsTableEditIndex$ | async) !== rowIndex) || !isExperimentEditable"
                     (click)="handleFactorTableEditClick(rowData.getRawValue(), rowIndex)"
                   >
                     <!-- Edit Icon -->
@@ -382,7 +382,7 @@
                   <button
                     type="button"
                     class="row-action-btn"
-                    [disabled]="(isFormLockedForEdit$ | async) && (factorsTableEditIndex$ | async) !== rowIndex"
+                    [disabled]="((isFormLockedForEdit$ | async) && (factorsTableEditIndex$ | async) !== rowIndex) || !isExperimentEditable"
                     (click)="handleFactorTableClearOrRemoveRow(rowIndex)"
                   >
                     <!-- Delete Icon -->
@@ -580,7 +580,7 @@
                               type="button"
                               class="row-action-btn"
                               [disabled]="
-                                (isFormLockedForEdit$ | async) && (levelsTableEditIndex$ | async) !== rowIndex
+                                ((isFormLockedForEdit$ | async) && (levelsTableEditIndex$ | async) !== rowIndex) || !isExperimentEditable
                               "
                               (click)="handleLevelTableEditClick(rowData.getRawValue(), rowIndex, factorIndex)"
                             >
@@ -615,7 +615,7 @@
                               type="button"
                               class="row-action-btn"
                               [disabled]="
-                                (isFormLockedForEdit$ | async) && (levelsTableEditIndex$ | async) !== rowIndex
+                                ((isFormLockedForEdit$ | async) && (levelsTableEditIndex$ | async) !== rowIndex) || !isExperimentEditable
                               "
                               (click)="handleLevelTableClearOrRemoveRow(factorIndex, rowIndex)"
                             >
@@ -822,8 +822,8 @@
         *ngIf="experimentInfo"
         mat-raised-button
         class="shared-modal--modal-btn default-button"
-        [ngClass]="{ 'default-button--disabled': (isFormLockedForEdit$ | async) || !isExperimentEditable }"
-        [disabled]="(isFormLockedForEdit$ | async) || !isExperimentEditable"
+        [ngClass]="{ 'default-button--disabled': (isFormLockedForEdit$ | async) }"
+        [disabled]="(isFormLockedForEdit$ | async)"
         (click)="emitEvent(NewExperimentDialogEvents.SAVE_DATA)"
       >
         {{ 'global.save.text' | translate }}
