--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-design/experiment-design.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-design/experiment-design.component.scss
@@ -34,6 +34,11 @@
       max-height: 135px;
       overflow: auto;
 
+      &.disabled {
+        opacity: 0.5;
+        cursor: default;
+      }
+
       mat-header-row {
         min-height: 35px;
         max-height: 35px;
