--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/factorial-experiment-design/factorial-experiment-design.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/factorial-experiment-design/factorial-experiment-design.component.html
@@ -10,6 +10,7 @@
           <ng-container *ngIf="decisionPoints?.length; else initialDecisionPointMessage">
             <mat-table
               class="decision-point-table"
+              [class.disabled]="!isExperimentEditable"
               [dataSource]="decisionPointDataSource"
               formArrayName="decisionPoints"
               #decisionPointTable
@@ -205,6 +206,7 @@
           <ng-container *ngIf="factor?.length; else initialFactorsMessage">
             <mat-table
               class="factor-table"
+              [class.disabled]="!isExperimentEditable"
               [dataSource]="factorDataSource"
               #factorTable
               formArrayName="factors"
