Revert "Grey out the decision points and conditions/factors tables"
This reverts commit 91c7494d8e3581734c3611e02ba6f37d50f30868.

--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/factorial-experiment-design/factorial-experiment-design.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/factorial-experiment-design/factorial-experiment-design.component.scss
@@ -19,14 +19,6 @@
       justify-content: space-between;
     }
 
-    .decision-point-table,
-    .factor-table {
-      &.disabled {
-        opacity: 0.5;
-        cursor: default;
-      }
-    }
-
     .decision-point-table {
       max-height: 135px;
       overflow: auto;
@@ -132,6 +124,7 @@
 
       mat-icon {
         position: relative;
+        cursor: pointer;
 
         &.active {
           transform: rotate(90deg);
@@ -201,6 +194,10 @@
         height: 16px;
         font-size: var(--text-size-x-large);
         color: gray;
+
+        &:hover {
+          cursor: pointer;
+        }
       }
 
       mat-form-field {
@@ -281,7 +278,7 @@
       background-color: transparent;
       color: var(--blue);
       &--disabled {
-        color: var(--light-blue);
+        color: var(--grey-6);
       }
     }
   }
