--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-list/experiment-list.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-list/experiment-list.component.html
@@ -8,7 +8,7 @@
         <mat-select
           class="ft-14-400"
           [(ngModel)]="selectedExperimentFilterOption"
-          (selectionChange)="applyFilter(searchValue); setSearchKey()"
+          (selectionChange)="applyFilter(searchValue); setSearchKey(selectedExperimentFilterOption)"
         >
           <mat-option class="ft-14-400" *ngFor="let filterOption of experimentFilterOptions" [value]="filterOption">
             {{ filterOption | titlecase }}
