BugFix 1453. Current status value of experiment is now shown in change experiment status modal

--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/modal/experiment-status/experiment-status.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/modal/experiment-status/experiment-status.component.html
@@ -13,9 +13,9 @@
         disabled="true"
         [(value)]="experimentInfo.state"
       >
-        <mat-option class="ft-14-400" *ngFor="let status of experimentStatus" [value]="status.value">
-          {{ status.value | experimentState }}
-        </mat-option>
+      <mat-option class="ft-14-400" *ngFor="let status of experimentStatus" [value]="experimentInfo.state">
+        {{ experimentInfo.state | experimentState }}
+      </mat-option>
       </mat-select>
     </mat-form-field>
 
