--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-section-card-list/feature-flag-root-table-section-card/feature-flag-root-table-section-card.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-section-card-list/feature-flag-root-table-section-card/feature-flag-root-table-section-card.component.html
@@ -1,5 +1,5 @@
-<app-common-section-card>
-  <app-feature-flag-root-table-section-card-header-container header-container>
+<app-common-section-card class="section-card">
+  <app-feature-flag-root-table-section-card-header-container header>
   </app-feature-flag-root-table-section-card-header-container>
   <app-feature-flag-root-table-section-card-content-container content> </app-feature-flag-root-table-section-card-content-container>
 </app-common-section-card>
