--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-section-card-list/feature-flag-root-table-section-card/feature-flag-root-table-section-card-header-container/feature-flag-root-table-section-card-header-container.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-section-card-list/feature-flag-root-table-section-card/feature-flag-root-table-section-card-header-container/feature-flag-root-table-section-card-header-container.component.html
@@ -1,9 +1,9 @@
-<div class="section-card-header-container">
-  <div class="left-side">left
+<app-common-section-card-header>
+  <ng-container left-side>Left
     <!-- <common-section-card-table-search-widget></common-section-card-table-search-widget> -->
-  </div>
-  <div class="right-side">right
+  </ng-container>
+  <ng-container right-side>Right
     <button mat-raised-button color="primary" (click)="openAddFlagModal()">Create</button>
     <!-- other buttons or common button set -->
-  </div>
-</div>
+  </ng-container>
+</app-common-section-card-header>
