--- a/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-root-page/common-root-page.component.scss
+++ b/frontend/projects/upgrade/src/app/shared-standalone-component-lib/components/common-root-page/common-root-page.component.scss
@@ -1,4 +1,4 @@
-::ng-deep .common-root-page-container {
+:host ::ng-deep .common-root-page-container {
   display: flex;
   flex-direction: column;
   background-color: #f0f2f9; // get this from global var for gray background
