--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page.component.html
@@ -1,3 +1,4 @@
 <app-common-root-page>
   <app-feature-flag-root-page-header header></app-feature-flag-root-page-header>
+  <!-- content element goes here (section card list) -->
 </app-common-root-page>
