improve font size and color

--- a/frontend/projects/upgrade/src/app/features/dashboard/home/pages/view-experiment/view-experiment.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/pages/view-experiment/view-experiment.component.scss
@@ -151,6 +151,10 @@ $font-size-small: 15px;
               }
             }
 
+            &-schedule-date {
+              color: var(--grey-3);
+            }
+
             &.end-criteria-container {
               .end-criteria-underline {
                 &--blue {
