Add the new info message for login

--- a/frontend/projects/upgrade/src/app/features/auth/login/login.component.html
+++ b/frontend/projects/upgrade/src/app/features/auth/login/login.component.html
@@ -9,6 +9,10 @@
         </div>
       </div>
       <div #googleSignInButtonRef class="google-sign-in-btn"></div>
+      <span class="info ft-12-700">
+        {{ 'login.info.text' | translate }}
+        <a href="https://www.upgradeplatform.org/" target="_blank" class="info--link">www.upgradeplatform.org</a>
+      </span>
     </mat-card>
   </div>
 </div>
