--- a/frontend/projects/upgrade/src/app/features/auth/login/login.component.scss
+++ b/frontend/projects/upgrade/src/app/features/auth/login/login.component.scss
@@ -52,7 +52,7 @@ $login-info-text-color: #6e6f72;
       .info {
         color: $login-info-text-color;
 
-        &--terms {
+        &--link {
           color: var(--blue);
         }
       }
