Feature/feature flags root page (#1491)
* playground and a demo reusable dialog component

* add example of just copying over the dialog

* use port 4201

* rearrange playground component placement and naming

* rewrite comments

* generalize dialog and paramaterize different common configs

* rearrange so that shared-components are in a dir that mirrors shared and is simpler to organize and import

* add routing mechanism to playground app, fix common-page height

* change modal strategy to use content projection

* push up latest WIP

* section cards

* rearranging with section-card-list example component

* fix component playground

* add back in commented out feature flag service stuff

* rearranging common and renamings

* rename all old references to feature flags as _LEGACY

* shorter paths for standalones

* adding ng-deep for common components to bind styles

* correctly importing mat-modules, i think

* remove component playground

* just feature flag root page and header

* header styles remove host

* add back feature flags core module

* fix wrong key name found after removing unused files

---------

Co-authored-by: Yagnik Hingrajiya <50392803+Yagnik56@users.noreply.github.com>
Co-authored-by: Zack Lee <90279765+zackcl@users.noreply.github.com>

--- a/frontend/projects/upgrade/src/styles.scss
+++ b/frontend/projects/upgrade/src/styles.scss
@@ -7,7 +7,7 @@
 @include mat.all-component-typographies();
 @include mat.core();
 
-@import './styles/variables.css';
+@import './styles/variables.scss';
 @import './themes/light-theme';
 @import './styles/utility.scss';
 @import './styles/shared-modal.scss';
@@ -28,11 +28,6 @@
 @import './app/features/dashboard/logs/common/logs-view.theme.scss';
 @import './app/features/dashboard/common/tabs-view.theme.scss';
 @import './app/features/auth/login/login.theme.scss';
-@import './app/features/dashboard/feature-flags/feature-flags-root/feature-flags-root.theme.scss';
-@import './app/features/dashboard/feature-flags/components/feature-flags-list/feature-flags-list.theme.scss';
-@import './app/features/dashboard/feature-flags/components/modal/new-flag/new-flag.theme.scss';
-@import './app/features/dashboard/feature-flags/components/flag-variations/flag-variations.theme.scss';
-@import './app/features/dashboard/feature-flags/pages/view-feature-flag/view-feature-flag.theme.scss';
 @import './app/features/dashboard/segments/segments-root/segments-root.theme.scss';
 @import './app/features/dashboard/segments/components/segments-list/segments-list.theme.scss';
 @import './app/features/dashboard/segments/components/modal/new-segment/new-segment.theme.scss';
@@ -69,16 +64,11 @@
   @include logs-view-component-theme($theme);
   @include tabs-view-theme($theme);
   @include login-component-theme($theme);
-  @include feature-flags-root-component-theme($theme);
-  @include feature-flags-list-component-theme($theme);
-  @include new-flag-component-theme($theme);
-  @include flag-variations-component-theme($theme);
   @include view-segment-component-theme($theme);
   @include segments-root-component-theme($theme);
   @include segments-list-component-theme($theme);
   @include new-segment-component-theme($theme);
   @include segment-members-component-theme($theme);
-  @include view-feature-flag-component-theme($theme);
   @include queries-modal-component-theme($theme);
   @include query-result-component-theme($theme);
   @include metrics-component-theme($theme);
@@ -106,7 +96,6 @@
   @include mat.all-component-densities(-2);
 }
 
-
 // TODO material specific style which cannot be changed by scope
 .mat-drawer-inner-container {
   display: flex;
@@ -114,7 +103,11 @@
   justify-content: space-between;
 }
 
-button[mat-button], button[mat-raised-button], button[mat-flat-button], button[mat-stroked-button], button[mat-icon-button] {
+button[mat-button],
+button[mat-raised-button],
+button[mat-flat-button],
+button[mat-stroked-button],
+button[mat-icon-button] {
   span {
     letter-spacing: normal;
   }
@@ -280,7 +273,6 @@ button[mat-button], button[mat-raised-button], button[mat-flat-button], button[m
   }
 }
 
-
 .mdc-text-field.mdc-text-field--filled,
 .mat-mdc-option {
   background-color: white !important;
@@ -376,7 +368,8 @@ button[mat-button], button[mat-raised-button], button[mat-flat-button], button[m
     border-bottom: 1px solid rgba(0, 0, 0, 0.12);
 
     .mat-mdc-tab-header-pagination {
-      box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 4px -1px, rgba(0, 0, 0, 0.14) 0px 4px 5px 0px, rgba(0, 0, 0, 0.12) 0px 1px 10px 0px;
+      box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 4px -1px, rgba(0, 0, 0, 0.14) 0px 4px 5px 0px,
+        rgba(0, 0, 0, 0.12) 0px 1px 10px 0px;
     }
 
     .mat-mdc-tab-label-container .mat-mdc-tab-labels .mat-mdc-tab {
@@ -410,7 +403,8 @@ button[mat-button], button[mat-raised-button], button[mat-flat-button], button[m
 }
 
 .cdk-overlay-pane {
-  .mat-mdc-select-panel, .mat-mdc-autocomplete-panel {
+  .mat-mdc-select-panel,
+  .mat-mdc-autocomplete-panel {
     padding: 0;
 
     .mat-mdc-option:hover {
