--- a/frontend/projects/upgrade/src/app/features/dashboard/home/pages/view-experiment/view-experiment.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/pages/view-experiment/view-experiment.component.scss
@@ -157,13 +157,9 @@ $font-size-small: 15px;
 
             &.end-criteria-container {
               .end-criteria-underline {
-                &--blue {
-                  text-decoration: underline;
-                  text-decoration-color: var(--blue);
-                }
-
                 &--grey {
                   text-decoration: underline;
+                  text-decoration-color: $dark-grey-text-color;
                 }
 
                 &--blue,
@@ -178,16 +174,12 @@ $font-size-small: 15px;
                 &--text {
                   display: unset;
                 }
-
-                &--data {
-                  color: var(--blue);
-                }
               }
 
               .edit-icon {
                 position: relative;
-                top: 5px;
-                margin-left: 5px;
+                top: 2px;
+                margin-left: 8px;
                 width: 18px;
                 height: 18px;
                 font-size: var(--text-size-x-large);
