Fix requested changes

--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/modal/experiment-status/experiment-status.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/modal/experiment-status/experiment-status.component.html
@@ -13,7 +13,7 @@
         disabled="true"
         [(value)]="experimentInfo.state"
       >
-      <mat-option class="ft-14-400" *ngFor="let status of experimentStatus" [value]="experimentInfo.state">
+      <mat-option class="ft-14-400" [value]="experimentInfo.state">
         {{ experimentInfo.state | experimentState }}
       </mat-option>
       </mat-select>
