--- a/frontend/projects/upgrade/src/app/features/auth/login/login.component.html
+++ b/frontend/projects/upgrade/src/app/features/auth/login/login.component.html
@@ -10,9 +10,8 @@
       </div>
       <div #googleSignInButtonRef class="google-sign-in-btn"></div>
       <span class="info ft-12-700">
-        {{ 'login.description-1.text' | translate }}
-        <span class="info--terms">{{ 'login.description-2.text' | translate }}</span>
-        {{ 'login.description-3.text' | translate }}
+        {{ 'login.info.text' | translate }}
+        <a href="https://www.upgradeplatform.org/" target="_blank" class="info--link">www.upgradeplatform.org</a>
       </span>
     </mat-card>
   </div>
