feature flag root content page created

--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/pages/feature-flag-root-page/feature-flag-root-page.component.html
@@ -1,4 +1,4 @@
 <app-common-root-page>
   <app-feature-flag-root-page-header header></app-feature-flag-root-page-header>
-  <!-- content element goes here (section card list) -->
+  <app-feature-flag-root-page-content content></app-feature-flag-root-page-content>
 </app-common-root-page>
